--- a/voting-app/Clarinet.toml
+++ b/voting-app/Clarinet.toml
@@ -5,8 +5,12 @@ authors = []
 telemetry = true
 cache_dir = "./.cache"
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
+[contracts.counter]
+path = 'contracts/voting.clar'
+clarity_version = 2
+epoch = 2.5
+[repl.analysis]
+passes = ['check_checker']
 
 [repl.analysis]
 passes = ["check_checker"]
