--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stacks/blockchain-api-client": "^8.0.0",
     "@stacks/network": "^6.16.0",
     "@stacks/transactions": "^6.16.1",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
