--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "node-fetch": "^2.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.5"
   }
 }
